--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "E:\\Anaconda\\envs\\cuong\\python.exe"
+    "python.pythonPath": "/home/hironeo/anaconda3/envs/bert/bin/python"
 }
